<resources>
    <string name="app_name">Casino</string>
    <string name="login">Ingresar</string>
    <string name="logintext">Inicia sesión</string>
    <string name="nombre_de_usuario">Usuario:</string>
    <string name="userName">Ingresa tu nombre</string>
    <string name="passwordtext">Contraseña:</string>
    <string name="password">Ingresa tu contraseña</string>
    <string name="clean">Limpiar</string>
    <string name="changeLanguage">Don\'t you speak Spanish?, click here</string>
    <string name="Noaccount">No tienes cuenta? Crea una aquí</string>
    <string name="registertext">Registro</string>
    <string name="register">Registrar</string>
    <string name="goToLogin">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="userOrPasswordIncorrect">Usuario o contraseña incorrectos</string>
    <string name="userAlreadyRegistered">Usuario ya registrado</string>
    <string name="fillAllFields">Llene todos los campos</string>
    <string name="admin">Admin</string>
    <string name="resetear">Todos los saldos</string>
    <string name="reset">Reset</string>
    <string name="advertencia">Advertencia: No se podrá recuperar los saldos una vez reiniciados.</string>
    <string name="tragamonedas">Ruleta</string>
    <string name="aplicar">Aplicar</string>
    <string name="administrar_momios">Administrar momios</string>
    <string name="irMomios">Momios</string>
    <string name="updated_prob">Probabilidad actualizada</string>
    <string name="monto_apostado">Monto Apostado</string>
    <string name="ruleta">Ruleta</string>
    <string name="spin">Spin</string>
    <string name="administrar_saldo">Administrar saldo</string>
    <string name="saldo_actual">Saldo actual:</string>
    <string name="agregar">Agregar</string>
    <string name="imagen_de_administrar_saldo">imagen de administrar saldo</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="momios_liga_mx">Momios liga MX</string>
    <string name="partido">Partido:</string>
    <string name="ajustar_momios">Ajustar Momios</string>
    <string name="momio_a_favor_del_equipo_1">Momio a favor del equipo 1</string>
    <string name="equipo_1">Equipo 1</string>
    <string name="equipo_2">Equipo 2</string>
    <string name="momio_a_favor_del_equipo_2">Momio a favor del equipo 2</string>
    <string name="empate">Empate</string>
    <string name="momio_para_empate">Momio para empate</string>
    <string name="guardar">Guardar</string>
    <string name="apuestele_pues">Apuestele pues…</string>
    <string name="enviar_apuesta">Enviar apuesta</string>
    <string name="verificar_apuestas">Verificar apuestas</string>
    <string name="dinero_ganado_0_0">Dinero ganado: 0.0</string>
    <string name="dinero_perdido_0_0">Dinero perdido: 0.0</string>
    <string name="resultados_de_los_partidos">Resultados de los partidos</string>
    <string name="selecciona_un_partido_y_monto_v_lido">Selecciona un partido y monto válido</string>
    <string name="selecciona_un_momio">Selecciona un momio</string>
    <string name="apuesta_guardada">Apuesta guardada</string>
    <string name="partido_vs_ganador">Partido: %1$s vs %2$s - Ganador: %3$s</string>
    <string name="sin_resultado">Sin resultado</string>
    <string name="hola_bienvenido">¡Hola, %1$s! Bienvenido 😊</string>
    <string name="zero">0.0</string>
    <string name="por_favor_ingresa_una_apuesta">Por favor, ingresa una apuesta.</string>
    <string name="ingresa_una_apuesta_v_lida">Ingresa una apuesta válida.</string>
    <string name="no_tienes_suficiente_saldo">No tienes suficiente saldo.</string>
    <string name="saldo">Saldo: %1$s</string>
    <string name="dinero_ganado">Dinero ganado: %1$s</string>
    <string name="dinero_perdido">Dinero perdido: %1$s</string>
    <string name="no_hubo_resultados">No hubo resultados</string>
    <string name="datos_guardados">Datos guardados</string>
    <string name="ganaste">" Ganaste: %1$s"</string>
    <string name="no_tienes_saldo_suficiente">No tienes saldo suficiente</string>
    <string name="momios">Momios</string>
    <string name="saldoMenu">saldo</string>
    <string name="monto_excede_saldo">El monto excede el saldo</string>
    <string name="monto_no_negativo">El monto no puede ser negativo</string>
    <string name="historial">Historial</string>
    <string name="apuesta_multiplicador_ganancia">%1$s | Apuesta: %2$s | Multiplicador: %3$s | Ganancia: %4$s</string>
    <string name="resultados_de_los_partidos_de_la_liga">Resultados de los Partidos de la Liga</string>
    <string name="equipos">Equipos</string>
    <string name="borrar_historial">Borrar historial</string>
    <string-array name="partidos_array">
        <item>Chivas vs Atlas</item>
        <item>América vs Pumas</item>
    </string-array>
</resources>