<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registertext"
        android:textSize="40sp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/button_text_color"
        android:fontFamily="@font/jacques_francois_shadow"/>


    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/cormorant_unicase"
        android:text="@string/nombre_de_usuario"
        android:textColor="@color/button_text_color"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="name"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/cormorant_infant"
        android:textColor="@color/button_text_color"
        android:textSize="24sp"
        android:gravity="center"
        android:hint="@string/userName"
        android:textColorHint="@color/edit_text_color"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUserName" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/cormorant_unicase"
        android:text="@string/passwordtext"
        android:textColor="@color/button_text_color"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUserName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/cormorant_infant"
        android:textColor="@color/button_text_color"
        android:textSize="24sp"
        android:gravity="center"
        android:hint="@string/password"
        android:textColorHint="@color/edit_text_color"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPassword" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_width="160dp"
            android:layout_height="73dp"
            android:text="@string/register"
            android:id="@+id/buttonRegister"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="25dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/button_text_color"
            android:textSize="23sp"
            android:fontFamily="@font/jacques_francois_shadow"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="73dp"
            android:text="@string/clean"
            android:id="@+id/buttonClean"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="25dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/button_text_color"
            android:textSize="23sp"
            android:fontFamily="@font/jacques_francois_shadow"/>
    </LinearLayout>



    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/buttonGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="21sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/cormorant_infant"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/link_text_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>