<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminSaldosActivity">

     <LinearLayout

         android:id="@+id/linearLayoutFeo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">

          <androidx.cardview.widget.CardView
              android:layout_width="50dp"
              android:layout_height="50dp"
              app:cardBackgroundColor="#5079DF"
              app:cardCornerRadius="25dp">

               <ImageView
                   android:layout_width="50dp"
                   android:layout_height="50dp"

                   android:src="@drawable/admin" />

          </androidx.cardview.widget.CardView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/admin"
              android:textSize="20sp" />


     </LinearLayout>

     <TextView
         android:id="@+id/textViewSaldos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/resetear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutFeo" />

     <LinearLayout
         android:layout_marginTop="20dp"
         android:id="@+id/linearLayoutReset"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/textViewSaldos">

          <androidx.cardview.widget.CardView
              android:id="@+id/cardViewReset"
              android:layout_width="50dp"
              android:layout_height="50dp"
              app:cardBackgroundColor="#5079DF"
              app:cardCornerRadius="25dp">

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/reset"
                 android:textAlignment="center"
                 android:gravity="center_vertical"
                 tools:ignore="RtlCompat" />

          </androidx.cardview.widget.CardView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:text="@string/advertencia"
              android:textAlignment="center"
              android:gravity="center_vertical"
              tools:ignore="RtlCompat" />
     </LinearLayout>

     <TextView
         android:id="@+id/textViewProbabilidades"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:text="@string/probabilidades"
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutReset"
         tools:ignore="RtlCompat" />


     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewProbabilidades"
         android:layout_width="200dp"
         android:layout_marginTop="20dp"
         android:layout_height="100dp"
         app:cardCornerRadius="10dp"
         app:cardBackgroundColor="#47881F"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewProbabilidades">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:orientation="vertical">


               <androidx.cardview.widget.CardView
                   android:layout_marginTop="10dp"
                   android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                     app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/tragamonedas"
                        android:textSize="20sp" />

               </androidx.cardview.widget.CardView>
               <LinearLayout
                   android:layout_marginTop="20dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                    android:orientation="horizontal"
                   android:gravity="center">
                    <androidx.cardview.widget.CardView
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                         <EditText
                             android:id="@+id/editTextTragamonedas"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:autofillHints="50"
                             android:hint="50"
                             android:inputType="numberDecimal"
                             android:textAlignment="center"
                             android:background="#00000000"
                             android:textSize="20sp" />


                    </androidx.cardview.widget.CardView>
               </LinearLayout>

          </LinearLayout>




     </androidx.cardview.widget.CardView>

     <Button
         android:id="@+id/buttonAplicar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/aplicar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardViewProbabilidades" />


     <TextView
         android:id="@+id/textViewAdministrarMomios"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/administrar_momios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAplicar" />

     <Button
         android:id="@+id/buttonMomios"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/irMomios"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewAdministrarMomios" />







</androidx.constraintlayout.widget.ConstraintLayout>